添加了wecommix渠道

--- a/部署方法.md
+++ b/部署方法.md
@@ -17,7 +17,8 @@ docker tag registry.cn-chengdu.aliyuncs.com/tu1h/wechotd:alpine gewe
 mkdir -p gewechat/data  
 docker run -itd -v ./gewechat/data:/root/temp -p 2531:2531 -p 2532:2532 --restart=always --name=gewe gewe
 ```
-```
+
+```commandline
 mkdir gewechat\data
 docker run -itd -v C:\Users\龙崎盈子\gewechat\data:/root/temp -p 2531:2531 -p 2532:2532 --restart=always --name=gewe gewe
 ```
@@ -58,11 +59,11 @@ docker-compose up -d
 
 # 打包方法
 
-打包的文件记得带上plugin库和其他的相关文件
+打包的文件记得带上plugin库和其他的相关文件，同时记得弄user下面的.flet文件他喵的
 
 这个是包含flet和wcf的打包代码
 ```commandline
-pyinstaller --onefile --noconsole --name=test --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\flet;flet" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry;wcferry" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry\\sdk.dll;wcferry" interface.py
+pyinstaller --onefile --noconsole --name=LongShangAI --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\flet;flet" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry;wcferry" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry\\sdk.dll;wcferry" --add-data "D:\\Program\\dify-on-wechat\\plugins;plugins" interface.py
 ```
 
 
