弄了群发的flet

--- a/部署方法.md
+++ b/部署方法.md
@@ -63,7 +63,7 @@ docker-compose up -d
 
 这个是包含flet和wcf的打包代码
 ```commandline
-pyinstaller --onefile --noconsole --name=LongShangAI --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\flet;flet" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry;wcferry" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry\\sdk.dll;wcferry" --add-data "D:\\Program\\dify-on-wechat\\plugins;plugins" interface.py
+pyinstaller --onefile --noconsole --name=LongShangAI --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\flet;flet" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry;wcferry" --add-data "D:\\Program\\0-venv\\dify-on-wechat-env\\Lib\\site-packages\\wcferry\\sdk.dll;wcferry" --add-data "D:\\Program\\dify-on-wechat\\plugins;plugins" --collect-data=ntwork interface.py
 ```
 
 
